axum-macros/tests/from_request/fail/override_rejection_on_enum_without_via.stderr
error: cannot use `rejection` without `via`
  --> tests/from_request/fail/override_rejection_on_enum_without_via.rs:18:16
   |
18 | #[from_request(rejection(MyRejection))]
   |                ^^^^^^^^^

error[E0277]: the trait bound `fn(MyExtractor) -> impl Future<Output = ()> {handler}: Handler<_, _>` is not satisfied
  --> tests/from_request/fail/override_rejection_on_enum_without_via.rs:10:50
   |
10 |     let _: Router = Router::new().route("/", get(handler).post(handler_result));
   |                                              --- ^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(MyExtractor) -> impl Future<Output = ()> {handler}`
   |                                              |
   |                                              required by a bound introduced by this call
   |
   = note: Consider using `#[axum::debug_handler]` to improve the error message
   = help: the following other types implement trait `Handler<T, S>`:
             `Layered<L, H, T, S>` implements `Handler<T, S>`
             `MethodRouter<S>` implements `Handler<(), S>`
note: required by a bound in `axum::routing::get`
  --> $WORKSPACE/axum/src/routing/method_routing.rs
   |
   | top_level_handler_fn!(get, GET);
   | ^^^^^^^^^^^^^^^^^^^^^^---^^^^^^
   | |                     |
   | |                     required by a bound in this function
   | required by this bound in `get`
   = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(Result<MyExtractor, MyRejection>) -> impl Future<Output = ()> {handler_result}: Handler<_, _>` is not satisfied
  --> tests/from_request/fail/override_rejection_on_enum_without_via.rs:10:64
   |
10 |     let _: Router = Router::new().route("/", get(handler).post(handler_result));
   |                                                           ---- ^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(Result<MyExtractor, MyRejection>) -> impl Future<Output = ()> {handler_result}`
   |                                                           |
   |                                                           required by a bound introduced by this call
   |
   = note: Consider using `#[axum::debug_handler]` to improve the error message
   = help: the following other types implement trait `Handler<T, S>`:
             `Layered<L, H, T, S>` implements `Handler<T, S>`
             `MethodRouter<S>` implements `Handler<(), S>`
note: required by a bound in `MethodRouter::<S>::post`
  --> $WORKSPACE/axum/src/routing/method_routing.rs
   |
   |     chained_handler_fn!(post, POST);
   |     ^^^^^^^^^^^^^^^^^^^^----^^^^^^^
   |     |                   |
   |     |                   required by a bound in this associated function
   |     required by this bound in `MethodRouter::<S>::post`
   = note: this error originates in the macro `chained_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
